--- a/index.html
+++ b/index.html
@@ -460,10 +460,10 @@ Tips & tricks for building robust, scalable, and efficient infrastructures
                 <img src="images/java.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Java</h4>
-                  <p>Lorem ipsum, dolor sit amet consectetur</p>
+                  <p>Java Mastery : Step by Step</p>
                   <a href="images/java.png" title="Java" data-gallery="portfolio-gallery-app"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://youtu.be/Vu7-w4MTZ5o?si=POcsVWlzCmLjY8tK" title="Java Playlist" class="details-link"><i
+                  <a href="https://youtube.com/playlist?list=PLmx73QP9bI6Euo7mofDJQHxapMMfXf3_d&si=XNFdXmO4Khpso_v-" title="Java Playlist" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
