--- a/index.html
+++ b/index.html
@@ -457,7 +457,7 @@ Tips & tricks for building robust, scalable, and efficient infrastructures
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="images/java.png" class="img-fluid" alt="">
+                <img src="images/java.png" class="img-fluid" alt="" style="width: 100px; height: 100px;">
                 <div class="portfolio-info">
                   <h4>Java</h4>
                   <p>Java Mastery : Step by Step</p>
@@ -470,7 +470,7 @@ Tips & tricks for building robust, scalable, and efficient infrastructures
             </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="images/python.png" class="img-fluid" alt="">
+                <img src="images/python.png" class="img-fluid" alt="" style="width: 100px; height: 100px;">
                 <div class="portfolio-info">
                   <h4>Python</h4>
                   <p>Python Mastery : Zero to Legend</p>
