--- a/index.html
+++ b/index.html
@@ -448,7 +448,7 @@ Tips & tricks for building robust, scalable, and efficient infrastructures
           <ul class="portfolio-filters isotope-filters" data-aos="fade-up" data-aos-delay="100">
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-app">Java</li>
-            <li data-filter=".filter-product">Python</li>
+            <li data-filter=".filter-Python">Python</li>
             <li data-filter=".filter-branding">linux</li>
             <li data-filter=".filter-books">Terraform</li>
           </ul><!-- End Portfolio Filters -->
@@ -457,7 +457,7 @@ Tips & tricks for building robust, scalable, and efficient infrastructures
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="images/java.png" class="img-fluid" alt="" style="width: 100px; height: 100px;">
+                <img src="images/java.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Java</h4>
                   <p>Java Mastery : Step by Step</p>
@@ -468,9 +468,9 @@ Tips & tricks for building robust, scalable, and efficient infrastructures
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
-            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Python">
               <div class="portfolio-content h-100">
-                <img src="images/python.png" class="img-fluid" alt="" style="width: 100px; height: 100px;">
+                <img src="images/python.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Python</h4>
                   <p>Python Mastery : Zero to Legend</p>
