--- a/index.html
+++ b/index.html
@@ -470,11 +470,11 @@ Tips & tricks for building robust, scalable, and efficient infrastructures
             </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Python">
               <div class="portfolio-content h-100">
-                <img src="images/python.png" class="img-fluid" alt="">
+                <img src="images/python playlist.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
                   <h4>Python</h4>
                   <p>Python Mastery : Zero to Legend</p>
-                  <a href="images/python.png" title="Python" data-gallery="portfolio-gallery-app"
+                  <a href="images/python playlist.png" title="Python" data-gallery="portfolio-gallery-app"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://youtube.com/playlist?list=PLmx73QP9bI6Hv55Bqa9za4_TB3lXQoVV3&si=r4Ry7WVNIoG18wHi" title="Python Playlist" class="details-link"><i
                       class="bi bi-link-45deg"></i></a>
