--- a/index.html
+++ b/index.html
@@ -481,6 +481,19 @@ Tips & tricks for building robust, scalable, and efficient infrastructures
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
+             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Python">
+              <div class="portfolio-content h-100">
+                <img src="images/python playlist.png" class="img-fluid" alt="">
+                <div class="portfolio-info">
+                  <h4>Python</h4>
+                  <p>Python Mastery : Zero to Legend</p>
+                  <a href="images/Linux playlist.png" title="Linux" data-gallery="portfolio-gallery-app"
+                    class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
+                  <a href="https://youtube.com/playlist?list=PLmx73QP9bI6Gw-B4oOWrrKtOOJDoHgKPo&si=l7ymOzDSvsVZMvaL" title="Linux Playlist" class="details-link"><i
+                      class="bi bi-link-45deg"></i></a>
+                </div>
+              </div>
+            </div><!-- End Portfolio Item -->
 
             
           </div><!-- End Portfolio Container -->
