--- a/index.html
+++ b/index.html
@@ -449,7 +449,7 @@ Tips & tricks for building robust, scalable, and efficient infrastructures
             <li data-filter="*" class="filter-active">All</li>
             <li data-filter=".filter-app">Java</li>
             <li data-filter=".filter-Python">Python</li>
-            <li data-filter=".filter-branding">linux</li>
+            <li data-filter=".filter-Linux">linux</li>
             <li data-filter=".filter-books">Terraform</li>
           </ul><!-- End Portfolio Filters -->
 
