--- a/index.html
+++ b/index.html
@@ -481,7 +481,7 @@ Tips & tricks for building robust, scalable, and efficient infrastructures
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
-             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Python">
+             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Linux">
               <div class="portfolio-content h-100">
                 <img src="images/Linux playlist.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
