--- a/index.html
+++ b/index.html
@@ -425,20 +425,22 @@
         <h2>SHIVA TECHHUB</h2>
         <p>🎬 Welcome to SHIVA TECHHUB – Your Hub for Automation & DevOps Excellence!
 
-🚀 Are you ready to supercharge your workflows and streamline your processes?
-Here at SHIVA TECHHUB, we dive deep into:
+          🚀 Are you ready to supercharge your workflows and streamline your processes?
+          Here at SHIVA TECHHUB, we dive deep into:
 
-Cutting-edge Automation tools like Python, Selenium, Airflow
+          Cutting-edge Automation tools like Python, Selenium, Airflow
 
-Powerful DevOps solutions like Docker, Kubernetes, CI/CD pipelines, Git, and Cloud platforms
+          Powerful DevOps solutions like Docker, Kubernetes, CI/CD pipelines, Git, and Cloud platforms
 
-Practical, real-world examples and step-by-step tutorials to help you master complex systems
+          Practical, real-world examples and step-by-step tutorials to help you master complex systems
 
-Tips & tricks for building robust, scalable, and efficient infrastructures
+          Tips & tricks for building robust, scalable, and efficient infrastructures
 
-💡 Whether you're a developer, cloud engineer, DevOps enthusiast, or automation wizard, our channel will help you stay ahead of the curve.
+          💡 Whether you're a developer, cloud engineer, DevOps enthusiast, or automation wizard, our channel will help
+          you stay ahead of the curve.
 
-🔔 Subscribe and join us on this journey towards automating everything and optimizing your DevOps workflows!</p>
+          🔔 Subscribe and join us on this journey towards automating everything and optimizing your DevOps workflows!
+        </p>
       </div><!-- End Section Title -->
 
       <div class="container">
@@ -463,8 +465,8 @@ Tips & tricks for building robust, scalable, and efficient infrastructures
                   <p>Java Mastery : Step by Step</p>
                   <a href="images/java.png" title="Java" data-gallery="portfolio-gallery-app"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://youtube.com/playlist?list=PLmx73QP9bI6Euo7mofDJQHxapMMfXf3_d&si=XNFdXmO4Khpso_v-" title="Java Playlist" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a>
+                  <a href="https://youtube.com/playlist?list=PLmx73QP9bI6Euo7mofDJQHxapMMfXf3_d&si=XNFdXmO4Khpso_v-"
+                    title="Java Playlist" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
@@ -476,12 +478,12 @@ Tips & tricks for building robust, scalable, and efficient infrastructures
                   <p>Python Mastery : Zero to Legend</p>
                   <a href="images/python playlist.png" title="Python" data-gallery="portfolio-gallery-app"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://youtube.com/playlist?list=PLmx73QP9bI6Hv55Bqa9za4_TB3lXQoVV3&si=r4Ry7WVNIoG18wHi" title="Python Playlist" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a>
+                  <a href="https://youtube.com/playlist?list=PLmx73QP9bI6Hv55Bqa9za4_TB3lXQoVV3&si=r4Ry7WVNIoG18wHi"
+                    title="Python Playlist" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
-             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Linux">
+            <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Linux">
               <div class="portfolio-content h-100">
                 <img src="images/Linux playlist.png" class="img-fluid" alt="">
                 <div class="portfolio-info">
@@ -489,13 +491,13 @@ Tips & tricks for building robust, scalable, and efficient infrastructures
                   <p>Linux : From Zero to Shell Hero</p>
                   <a href="images/Linux playlist.png" title="Linux" data-gallery="portfolio-gallery-app"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
-                  <a href="https://youtube.com/playlist?list=PLmx73QP9bI6Gw-B4oOWrrKtOOJDoHgKPo&si=l7ymOzDSvsVZMvaL" title="Linux Playlist" class="details-link"><i
-                      class="bi bi-link-45deg"></i></a>
+                  <a href="https://youtube.com/playlist?list=PLmx73QP9bI6Gw-B4oOWrrKtOOJDoHgKPo&si=l7ymOzDSvsVZMvaL"
+                    title="Linux Playlist" class="details-link"><i class="bi bi-link-45deg"></i></a>
                 </div>
               </div>
             </div><!-- End Portfolio Item -->
 
-            
+
           </div><!-- End Portfolio Container -->
 
         </div>
