--- a/index.html
+++ b/index.html
@@ -681,13 +681,12 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Proin iaculis purus consequat sem cure digni ssim donec porttitora entum suscipit rhoncus.
-                    Accusantium quam, ultricies eget id, aliquam eget nibh et. Maecen aliquam, risus at semper.</span>
+                  <span>Shiva is knowledgeable and commited individual. He is a great software assurance tester and automation engineer. His communication is straightforward, honest and respectful. To sum it up, I experienced Shiva to be an outstanding co-worker.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-1.jpg" class="testimonial-img" alt="">
-                <h3>Saul Goodman</h3>
-                <h4>Ceo &amp; Founder</h4>
+                <h3>Deepthi Vemuri</h3>
+                <h4>Senior QA Automation Engineer</h4>
               </div>
             </div><!-- End testimonial item -->
 
