--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="images/java.png" class="img-fluid" alt="">
+                <img src="images/java.png" width="500" height="300" style="display: block; margin: 0 auto;" alt="Java Image">
                 <div class="portfolio-info">
                   <h4>Java</h4>
                   <p>Java Mastery : Step by Step</p>
@@ -472,7 +472,7 @@
             </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Python">
               <div class="portfolio-content h-100">
-                <img src="images/python playlist.png" class="img-fluid" alt="">
+               <img src="images/python playlist.png" width="600" height="400" style="display: block; margin: 0 auto;" alt="Python Playlist">
                 <div class="portfolio-info">
                   <h4>Python</h4>
                   <p>Python Mastery : Zero to Legend</p>
@@ -485,7 +485,7 @@
             </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Linux">
               <div class="portfolio-content h-100">
-                <img src="images/Linux playlist.png" class="img-fluid" alt="">
+                <img src="images/Linux playlist.png" width="600" height="400" style="display: block; margin: 0 auto;" alt="Linux Playlist">
                 <div class="portfolio-info">
                   <h4>Linux</h4>
                   <p>Linux : From Zero to Shell Hero</p>
