--- a/index.html
+++ b/index.html
@@ -459,7 +459,7 @@
 
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-app">
               <div class="portfolio-content h-100">
-                <img src="images/java.png" width="100" height="100" style="display: block; margin: 0 auto;" alt="Java Image">
+                <img src="images/java.png" width="200" height="200" style="display: block; margin: 0 auto;" alt="Java Image">
                 <div class="portfolio-info">
                   <h4>Java</h4>
                   <p>Java Mastery : Step by Step</p>
@@ -472,7 +472,7 @@
             </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Python">
               <div class="portfolio-content h-100">
-               <img src="images/python playlist.png" width="100" height="100" style="display: block; margin: 0 auto;" alt="Python Playlist">
+               <img src="images/python playlist.png" width="200" height="200" style="display: block; margin: 0 auto;" alt="Python Playlist">
                 <div class="portfolio-info">
                   <h4>Python</h4>
                   <p>Python Mastery : Zero to Legend</p>
@@ -485,11 +485,11 @@
             </div><!-- End Portfolio Item -->
             <div class="col-lg-4 col-md-6 portfolio-item isotope-item filter-Linux">
               <div class="portfolio-content h-100">
-                <img src="images/Linux playlist.png" width="100" height="100" style="display: block; margin: 0 auto;" alt="Linux Playlist">
+                <img src="images/linux.png" width="200" height="200" style="display: block; margin: 0 auto;" alt="Linux Playlist">
                 <div class="portfolio-info">
                   <h4>Linux</h4>
                   <p>Linux : From Zero to Shell Hero</p>
-                  <a href="images/Linux playlist.png" title="Linux" data-gallery="portfolio-gallery-app"
+                  <a href="images/linux.png" title="Linux" data-gallery="portfolio-gallery-app"
                     class="glightbox preview-link"><i class="bi bi-zoom-in"></i></a>
                   <a href="https://youtube.com/playlist?list=PLmx73QP9bI6Gw-B4oOWrrKtOOJDoHgKPo&si=l7ymOzDSvsVZMvaL"
                     title="Linux Playlist" class="details-link"><i class="bi bi-link-45deg"></i></a>
@@ -694,13 +694,12 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Export tempor illum tamen malis malis eram quae irure esse labore quem cillum quid malis quorum
-                    velit fore eram velit sunt aliqua noster fugiat irure amet legam anim culpa.</span>
+                  <span>I am really fortunate to work with shiva.He is very good in Automation and coming to our team it’s very tough to automate our application but still he took a great initiative and with all his research he came up with one good automation tool. This is really a big add-on to our project. With in short time he marvellously showed his skills in automating things and helped in our project releases on time.Add on to this he is a great team player and also a good teacher is hided in him. He always works smart and adds his valuable points to the team.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-2.jpg" class="testimonial-img" alt="">
-                <h3>Sara Wilsson</h3>
-                <h4>Designer</h4>
+                <img src="assets/img/testimonials/valli.jpg" class="testimonial-img" alt="">
+                <h3>pankaja Valli</h3>
+                <h4>QA Manager</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -708,13 +707,12 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Enim nisi quem export duis labore cillum quae magna enim sint quorum nulla quem veniam duis
-                    minim tempor labore quem eram duis noster aute amet eram fore quis sint minim.</span>
+                  <span>I worked closely with Shiva in the same team during my tenure in NCR. Shiva is very composed, quick learner and having very good communication skills. He introduced new tools to our team which added a good value. He has very good command in all the latest testing tools.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-3.jpg" class="testimonial-img" alt="">
-                <h3>Jena Karlis</h3>
-                <h4>Store Owner</h4>
+                <img src="assets/img/testimonials/Sudheer.jpg" class="testimonial-img" alt="">
+                <h3>Sudheer Pulipati</h3>
+                <h4>SWE III at JP Morgan Chase</h4>
               </div>
             </div><!-- End testimonial item -->
 
@@ -722,13 +720,16 @@
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Fugiat enim eram quae cillum dolore dolor amet nulla culpa multos export minim fugiat dolor enim
-                    duis veniam ipsum anim magna sunt elit fore quem dolore labore illum veniam.</span>
+                  <span>It’s rare that you come across standout talent like Shiva.
+I first became acquainted with him in 2017, when I joined ORACLE.
+He has a broad range of skills. Since the beginning of our collaboration I know him as intelligent, hard-working and outgoing person, which consistently produced high quality work in a timely fashion.
+I enthusiastically recommend Shiva as a promising person..
+Ridiculously efficient’ is the phrase that comes to mind when I think about Shiva..</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
                 <img src="assets/img/testimonials/testimonials-4.jpg" class="testimonial-img" alt="">
-                <h3>Matt Brandon</h3>
-                <h4>Freelancer</h4>
+                <h3>Mahesh Kumar Mutukula</h3>
+                <h4>Senior Software Engineer</h4>
               </div>
             </div><!-- End testimonial item -->
 
