--- a/index.html
+++ b/index.html
@@ -737,13 +737,36 @@ Ridiculously efficient’ is the phrase that comes to mind when I think about Sh
               <div class="testimonial-item">
                 <p>
                   <i class="bi bi-quote quote-icon-left"></i>
-                  <span>Quis quorum aliqua sint quem legam fore sunt eram irure aliqua veniam tempor noster veniam sunt
-                    culpa nulla illum cillum fugiat legam esse veniam culpa fore nisi cillum quid.</span>
+                  <span>Shiva is one of the brightest and yet so humble technical persons I have worked with. A quick learner, Shiva never panics and helps his team to achieve best. Shiva was key resource in the suite8 automation team with equally good functional knowledge. He always responded to team’s ad hoc requests with persistence. He falls in the category of very few straight forward individuals who are not reluctant to call an ace an ace. He adds a lot of value to the team and can step-up to key roles in short span of time.I would definitely want to have him in my team again.</span>
                   <i class="bi bi-quote quote-icon-right"></i>
                 </p>
-                <img src="assets/img/testimonials/testimonials-5.jpg" class="testimonial-img" alt="">
-                <h3>John Larson</h3>
-                <h4>Entrepreneur</h4>
+                <img src="assets/img/testimonials/Shashank.jpg" class="testimonial-img" alt="">
+                <h3>Shashank Telidevara</h3>
+                <h4>Product Manager</h4>
+              </div>
+            </div><!-- End testimonial item -->
+             <div class="swiper-slide">
+              <div class="testimonial-item">
+                <p>
+                  <i class="bi bi-quote quote-icon-left"></i>
+                  <span>I feel privilege to work along with Shiva .He is extremely talented in Selenium automation testing. He is so dedicated and hard working to achieve what he wanted. </span>
+                  <i class="bi bi-quote quote-icon-right"></i>
+                </p>
+                <img src="assets/img/testimonials/vinod.jpg" class="testimonial-img" alt="">
+                <h3>Vinod Kumar Kanuganti</h3>
+                <h4>Application Development Lead</h4>
+              </div>
+            </div><!-- End testimonial item -->
+             <div class="swiper-slide">
+              <div class="testimonial-item">
+                <p>
+                  <i class="bi bi-quote quote-icon-left"></i>
+                  <span>shiva is an automation genius. He has outstanding knowledge on automation and testing. He is a professional, helpful, and positive person. It is a pleasure and honor to recommend shiva to anyone who wants to hire him.</span>
+                  <i class="bi bi-quote quote-icon-right"></i>
+                </p>
+                <img src="assets/img/testimonials/Bala.jpg" class="testimonial-img" alt="">
+                <h3>Balachennakesava Rao</h3>
+                <h4>Associate Consultant</h4>
               </div>
             </div><!-- End testimonial item -->
 
